creating bad request game/choose tests
